--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Привет</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum deserunt, quaerat modi consequatur vitae natus! Sit assumenda nihil corrupti ullam, hic nam enim sapiente ipsum praesentium incidunt? Repudiandae, assumenda veritatis.</p>
 </body>
 </html>
