--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
 
-    <a class="header-btn" href="#start">Начать учиться</a>
+    <button class="header-btn" href="#start">Начать учиться</button>
 
     <img class="header-logo" src="#" alt="">SKIING SCHOOL</img>
 
@@ -40,13 +40,19 @@
       <ul class="benefits-list">
 
         <li class="benefits-item">
+          <h3 class="benefits-title-small">МЫ ПРОФИ</h3>
+
+          <p class="benefits-text">Наши инструктора - мастера спорта, призеры российских и международных стартов.</p>
+        </li>
+
+        <li class="benefits-item">
           <h3 class="benefits-title-small">2000+</h3>
 
           <p class="benefits-text">Довольных райдеров рассекает на заснеженных склонах. И это наша заслуга </p>
         </li>
 
         <li class="benefits-item">
-          <h3 class="benefits-title-small">учим 365 дней в году</h3>
+          <h3 class="benefits-title-small">УЧИМ 365 ДНЕЙ В ГОДУ</h3>
 
           <p class="benefits-text">У нас есть крутой тренажер, имитирующий реальный склон площадью 50м. кв</p>
         </li>
@@ -58,14 +64,14 @@
         </li>
 
         <li class="benefits-item">
-          <h3 class="benefits-title-small">подари лыжу</h3>
+          <h3 class="benefits-title-small">ПОДАРИ ЛЫЖУ</h3>
 
           <p class="benefits-text">Наш благотворительный проект - помогаем сиротам приобщиться к спорту и наладить
             жизнь</p>
         </li>
 
         <li class="benefits-item">
-          <h3 class="benefits-title-small">закрытый клуб</h3>
+          <h3 class="benefits-title-small">ЗАКРЫТЫЙ КЛУБ</h3>
 
           <p class="benefits-text">Наши студенты попадают на закрытые мастер-классы и вечеринки</p>
 
@@ -74,19 +80,19 @@
 
     </section>
 
-    <section class="purchase">
+    <section class="purchaise">
 
-      <h2 class="purchase-title">ГОУ! ПОКОРЯТЬ СКЛОНЫ ВМЕСТЕ</h2>
+      <h2 class="purchaise-title">ГОУ! ПОКОРЯТЬ СКЛОНЫ ВМЕСТЕ</h2>
 
-      <a id="start" class="purchase-btn" href="#">Начать учиться</a>
+     <button class="purchaise-btn">Начать учиться</button>
 
-      <img src="images/photo-lead.png" alt="Два лыжника" class="purchase-img"></img>
+      <img src="images/photo-lead.png" alt="Два лыжника" class="purchaise-img"></img>
 
-      <img src="images/photo-lead (1).png" alt="Трасса лыжников" class="purchase-img"></img>
+      <img src="images/photo-lead (1).png" alt="Трасса лыжников" class="purchaise-img"></img>
 
-      <img src="images/photo-lead (2).png" alt="Довольные сноубордисты" class="purchase-img"></img>
+      <img src="images/photo-lead (2).png" alt="Довольные сноубордисты" class="purchaise-img"></img>
 
-      <img src="images/photo-lead (3).png" alt="Трасса сноубордистов" class="purchase-img"></img>
+      <img src="images/photo-lead (3).png" alt="Трасса сноубордистов" class="purchaise-img"></img>
 
     </section>
 
@@ -98,16 +104,20 @@
     <p class="footer-text">Присоеденяйся</p>
 
     <ul class="footer-social">
-      <li class="social-icon"><a href="#" class="social-link"><img src="images/Vector.png" alt="Twitter" class="social-img"></a>
+      <li class="social-icon"><a href="#" class="social-link"><img src="images/Vector.png" alt="Twitter"
+            class="social-img"></a>
       </li>
       <li class="social-icon">
-        <a href="#" class="social-lnk" title="Мы в Линкед Ин"><img src="images/Vector (1).png" alt="Linked In" class="social-img"></a>
+        <a href="#" class="social-lnk" title="Мы в Линкед Ин"><img src="images/Vector (1).png" alt="Linked In"
+            class="social-img"></a>
       </li>
       <li class="social-icon">
-        <a href="#" class="social-lnk" title="Мы в ВК"><img src="images/Vector (2).png" alt="Google +" class="social-img"></a>
+        <a href="#" class="social-lnk" title="Мы в ВК"><img src="images/Vector (2).png" alt="Google +"
+            class="social-img"></a>
       </li>
       <li class="social-icon">
-        <a href="#" class="social-lnk" title="Мы в Телеграме"><img src="images/Vector (3).png" alt="Facebook" class="social-img"></a>
+        <a href="#" class="social-lnk" title="Мы в Телеграме"><img src="images/Vector (3).png" alt="Facebook"
+            class="social-img"></a>
       </li>
     </ul>
 
