--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 <body>
   <header class="header">
+    <div class="header-feed">
+      <button class="header-btn" href="#start">Начать учиться</button>
 
-    <button class="header-btn" href="#start">Начать учиться</button>
+      <img class="header-logo" src="#" alt="">SKIING SCHOOL</img>
 
-    <img class="header-logo" src="#" alt="">SKIING SCHOOL</img>
+      <p class="header-phone">+7 800 800-00-00</p>
+    </div>
 
-    <p class="header-phone">+7 800 800-00-00</p>
+
 
   </header>
 
@@ -24,75 +27,85 @@
 
     <section class="promo">
 
-      <H1 class="promo-title">ОБУЧЕНИЕ ГОРНЫМ ЛЫЖАМ В САНКТ-ПЕТЕРБУРГЕ</H1>
+      <div class="promo-feed">
+        <H1 class="promo-title">ОБУЧЕНИЕ ГОРНЫМ ЛЫЖАМ В САНКТ-ПЕТЕРБУРГЕ</H1>
 
-      <p class="promo-text">Учим на склонах Игоры.Охта-парка и на базе собственной <br>
-        тренировочной базы в центре города с применением <br>
-        уникального тренажера, иммитирующего склон </p>
+        <p class="promo-text">Учим на склонах Игоры.Охта-парка и на базе собственной <br>
+          тренировочной базы в центре города с применением <br>
+          уникального тренажера, иммитирующего склон </p>
+
+      </div>
+
 
 
     </section>
 
     <section class="benefits">
+      <div class="benefits-feed">
+        <h2 class="benefits-title"> УЧИТЬСЯ С НАМИ УВЛЕКАТЕЛЬНО И ЭФФЕКТИВНО</h2>
 
-      <h2 class="benefits-title"> УЧИТЬСЯ С НАМИ УВЛЕКАТЕЛЬНО И ЭФФЕКТИВНО</h2>
+        <ul class="benefits-list">
 
-      <ul class="benefits-list">
+          <li class="benefits-item">
+            <h3 class="benefits-title-small">МЫ ПРОФИ</h3>
 
-        <li class="benefits-item">
-          <h3 class="benefits-title-small">МЫ ПРОФИ</h3>
+            <p class="benefits-text">Наши инструктора - мастера спорта, призеры российских и международных стартов.</p>
+          </li>
 
-          <p class="benefits-text">Наши инструктора - мастера спорта, призеры российских и международных стартов.</p>
-        </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title-small">2000+</h3>
 
-        <li class="benefits-item">
-          <h3 class="benefits-title-small">2000+</h3>
+            <p class="benefits-text">Довольных райдеров рассекает на заснеженных склонах. И это наша заслуга </p>
+          </li>
 
-          <p class="benefits-text">Довольных райдеров рассекает на заснеженных склонах. И это наша заслуга </p>
-        </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title-small">УЧИМ 365 ДНЕЙ В ГОДУ</h3>
 
-        <li class="benefits-item">
-          <h3 class="benefits-title-small">УЧИМ 365 ДНЕЙ В ГОДУ</h3>
+            <p class="benefits-text">У нас есть крутой тренажер, имитирующий реальный склон площадью 50м. кв</p>
+          </li>
 
-          <p class="benefits-text">У нас есть крутой тренажер, имитирующий реальный склон площадью 50м. кв</p>
-        </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title-small">20+</h3>
 
-        <li class="benefits-item">
-          <h3 class="benefits-title-small">20+</h3>
+            <p class="benefits-text">Наград завоевали наши ученики на регионалных и международных соревнованиях</p>
+          </li>
 
-          <p class="benefits-text">Наград завоевали наши ученики на регионалных и международных соревнованиях</p>
-        </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title-small">ПОДАРИ ЛЫЖУ</h3>
 
-        <li class="benefits-item">
-          <h3 class="benefits-title-small">ПОДАРИ ЛЫЖУ</h3>
+            <p class="benefits-text">Наш благотворительный проект - помогаем сиротам приобщиться к спорту и наладить
+              жизнь</p>
+          </li>
 
-          <p class="benefits-text">Наш благотворительный проект - помогаем сиротам приобщиться к спорту и наладить
-            жизнь</p>
-        </li>
+          <li class="benefits-item">
+            <h3 class="benefits-title-small">ЗАКРЫТЫЙ КЛУБ</h3>
 
-        <li class="benefits-item">
-          <h3 class="benefits-title-small">ЗАКРЫТЫЙ КЛУБ</h3>
+            <p class="benefits-text">Наши студенты попадают на закрытые мастер-классы и вечеринки</p>
 
-          <p class="benefits-text">Наши студенты попадают на закрытые мастер-классы и вечеринки</p>
+          </li>
+        </ul>
 
-        </li>
-      </ul>
+      </div>
+
 
     </section>
 
     <section class="purchaise">
+      <div class="purchaise-feed">
+        <h2 class="purchaise-title">ГОУ! ПОКОРЯТЬ СКЛОНЫ ВМЕСТЕ</h2>
 
-      <h2 class="purchaise-title">ГОУ! ПОКОРЯТЬ СКЛОНЫ ВМЕСТЕ</h2>
+        <button class="purchaise-btn">Начать учиться</button>
 
-     <button class="purchaise-btn">Начать учиться</button>
+        <img src="images/happy-ski.jpg" alt="Два лыжника" class="purchaise-img"></img>
 
-      <img src="images/photo-lead.png" alt="Два лыжника" class="purchaise-img"></img>
+        <img src="images/ski-people.jpg" alt="Трасса лыжников" class="purchaise-img"></img>
 
-      <img src="images/photo-lead (1).png" alt="Трасса лыжников" class="purchaise-img"></img>
+        <img src="images/happy-people.jpg" alt="Довольные сноубордисты" class="purchaise-img"></img>
 
-      <img src="images/photo-lead (2).png" alt="Довольные сноубордисты" class="purchaise-img"></img>
+        <img src="images/snowboard.jpg" alt="Трасса сноубордистов" class="purchaise-img"></img>
 
-      <img src="images/photo-lead (3).png" alt="Трасса сноубордистов" class="purchaise-img"></img>
+      </div>
+
 
     </section>
 
@@ -101,27 +114,31 @@
 
   <footer class="footer">
 
-    <p class="footer-text">Присоеденяйся</p>
+    <div class="footer-feed">
+      <p class="footer-text">Присоеденяйся</p>
 
-    <ul class="footer-social">
-      <li class="social-icon"><a href="#" class="social-link"><img src="images/Vector.png" alt="Twitter"
-            class="social-img"></a>
-      </li>
-      <li class="social-icon">
-        <a href="#" class="social-lnk" title="Мы в Линкед Ин"><img src="images/Vector (1).png" alt="Linked In"
-            class="social-img"></a>
-      </li>
-      <li class="social-icon">
-        <a href="#" class="social-lnk" title="Мы в ВК"><img src="images/Vector (2).png" alt="Google +"
-            class="social-img"></a>
-      </li>
-      <li class="social-icon">
-        <a href="#" class="social-lnk" title="Мы в Телеграме"><img src="images/Vector (3).png" alt="Facebook"
-            class="social-img"></a>
-      </li>
-    </ul>
+      <ul class="footer-social">
+        <li class="social-icon"><a href="#" class="social-link"><img src="images/Vector.png" alt="Twitter"
+              class="social-img"></a>
+        </li>
+        <li class="social-icon">
+          <a href="#" class="social-lnk" title="Мы в Линкед Ин"><img src="images/Vector (1).png" alt="Linked In"
+              class="social-img"></a>
+        </li>
+        <li class="social-icon">
+          <a href="#" class="social-lnk" title="Мы в ВК"><img src="images/Vector (2).png" alt="Google +"
+              class="social-img"></a>
+        </li>
+        <li class="social-icon">
+          <a href="#" class="social-lnk" title="Мы в Телеграме"><img src="images/Vector (3).png" alt="Facebook"
+              class="social-img"></a>
+        </li>
+      </ul>
 
-    <p class="footer-copyright">copy+v copy+c © 2021</p>
+      <p class="footer-copyright">copy+v copy+c © 2021</p>
+    </div>
+
+
 
   </footer>
 
