черновик флекс блоков

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 <body>
   <header class="header">
-    <div class="header-feed">
-      <button class="header-btn" href="#start">Начать учиться</button>
+    <div class="header-fade">
+      <div class="header-wrap">
+        <button class="header-btn" href="#start">Начать учиться</button>
 
-      <img class="header-logo" src="#" alt="">SKIING SCHOOL</img>
+        <img class="header-logo" src="images/logo.svg" alt=""></img>
 
-      <p class="header-phone">+7 800 800-00-00</p>
+        <p class="header-phone">+7 800 800-00-00</p>
+      </div>
+
     </div>
 
 
@@ -27,7 +30,7 @@
 
     <section class="promo">
 
-      <div class="promo-feed">
+      <div class="promo-fade">
         <H1 class="promo-title">ОБУЧЕНИЕ ГОРНЫМ ЛЫЖАМ В САНКТ-ПЕТЕРБУРГЕ</H1>
 
         <p class="promo-text">Учим на склонах Игоры.Охта-парка и на базе собственной <br>
@@ -41,49 +44,56 @@
     </section>
 
     <section class="benefits">
-      <div class="benefits-feed">
+      <div class="benefits-fade">
         <h2 class="benefits-title"> УЧИТЬСЯ С НАМИ УВЛЕКАТЕЛЬНО И ЭФФЕКТИВНО</h2>
+        <div class="benefits-wrap">
+            <!-- <div class="benefits-table1"> -->
+              <div class="benefits-item">
+                <h3 class="benefits-title-small">МЫ ПРОФИ</h3>
 
-        <ul class="benefits-list">
+                <p class="benefits-text">Наши инструктора - мастера спорта, призеры российских и международных стартов.
+                </p>
+              </div>
 
-          <li class="benefits-item">
-            <h3 class="benefits-title-small">МЫ ПРОФИ</h3>
+              <div class="benefits-item">
+                <h3 class="benefits-title-small">2000+</h3>
 
-            <p class="benefits-text">Наши инструктора - мастера спорта, призеры российских и международных стартов.</p>
-          </li>
+                <p class="benefits-text">Довольных райдеров рассекает на заснеженных склонах. И это наша заслуга </p>
+              </div>
 
-          <li class="benefits-item">
-            <h3 class="benefits-title-small">2000+</h3>
+              <div class="benefits-item">
+                <h3 class="benefits-title-small">УЧИМ 365 ДНЕЙ В ГОДУ</h3>
 
-            <p class="benefits-text">Довольных райдеров рассекает на заснеженных склонах. И это наша заслуга </p>
-          </li>
+                <p class="benefits-text">У нас есть крутой тренажер, имитирующий реальный склон площадью 50м. кв</p>
+              </div>
+            <!-- </div> -->
 
-          <li class="benefits-item">
-            <h3 class="benefits-title-small">УЧИМ 365 ДНЕЙ В ГОДУ</h3>
+            <!-- <div class="benefits-table2"></div> -->
+              <div class="benefits-item">
+                <h3 class="benefits-title-small">20+</h3>
 
-            <p class="benefits-text">У нас есть крутой тренажер, имитирующий реальный склон площадью 50м. кв</p>
-          </li>
+                <p class="benefits-text">Наград завоевали наши ученики на регионалных и международных соревнованиях</p>
+              </div>
 
-          <li class="benefits-item">
-            <h3 class="benefits-title-small">20+</h3>
+              <div class="benefits-item">
+                <h3 class="benefits-title-small">ПОДАРИ ЛЫЖУ</h3>
 
-            <p class="benefits-text">Наград завоевали наши ученики на регионалных и международных соревнованиях</p>
-          </li>
+                <p class="benefits-text">Наш благотворительный проект - помогаем сиротам приобщиться к спорту и наладить
+                  жизнь</p>
+              </div>
 
-          <li class="benefits-item">
-            <h3 class="benefits-title-small">ПОДАРИ ЛЫЖУ</h3>
+              <div class="benefits-item">
+                <h3 class="benefits-title-small">ЗАКРЫТЫЙ КЛУБ</h3>
 
-            <p class="benefits-text">Наш благотворительный проект - помогаем сиротам приобщиться к спорту и наладить
-              жизнь</p>
-          </li>
+                <p class="benefits-text">Наши студенты попадают на закрытые мастер-классы и вечеринки</p>
 
-          <li class="benefits-item">
-            <h3 class="benefits-title-small">ЗАКРЫТЫЙ КЛУБ</h3>
+              </div>
+            <!-- </div> -->
 
-            <p class="benefits-text">Наши студенты попадают на закрытые мастер-классы и вечеринки</p>
+        </div>
 
-          </li>
-        </ul>
+
+
 
       </div>
 
