--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 <body>
   <header class="header">
     <div class="header-fade">
-      <div class="header-wrap">
-        <button class="header-btn" href="#start">Начать учиться</button>
+      <div class="container">
+        <div class="header-wrap">
+          <button class="header-btn" href="#start">Начать учиться</button>
 
-        <img class="header-logo" src="images/logo.svg" alt=""></img>
+          <img class="header-logo" src="images/logo.svg" alt=""></img>
 
-        <p class="header-phone">+7 800 800-00-00</p>
+          <a href="+78008000000" class="header-phone">+7 800 800-00-00</a>
+        </div>
+
       </div>
-
     </div>
-
-
-
   </header>
 
   <main class="main">
@@ -45,56 +44,48 @@
 
     <section class="benefits">
       <div class="benefits-fade">
-        <h2 class="benefits-title"> УЧИТЬСЯ С НАМИ УВЛЕКАТЕЛЬНО И ЭФФЕКТИВНО</h2>
-        <div class="benefits-wrap">
-            <!-- <div class="benefits-table1"> -->
-              <div class="benefits-item">
-                <h3 class="benefits-title-small">МЫ ПРОФИ</h3>
+        <div class="container">
+          <h2 class="benefits-title"> учиться с нами увлекательно и эффективно</h2>
+          <ul class="benefits-wrap">
+            <li class="benefits-item">
+              <h3 class="benefits-title-small">мы профи</h3>
 
-                <p class="benefits-text">Наши инструктора - мастера спорта, призеры российских и международных стартов.
-                </p>
-              </div>
+              <p class="benefits-text">Наши инструктора - мастера спорта, призеры российских и международных стартов.
+              </p>
+            </li>
 
-              <div class="benefits-item">
-                <h3 class="benefits-title-small">2000+</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title-small">2000+</h3>
 
-                <p class="benefits-text">Довольных райдеров рассекает на заснеженных склонах. И это наша заслуга </p>
-              </div>
+              <p class="benefits-text">Довольных райдеров рассекает на заснеженных склонах. И это наша заслуга </p>
+            </li>
 
-              <div class="benefits-item">
-                <h3 class="benefits-title-small">УЧИМ 365 ДНЕЙ В ГОДУ</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title-small">учим 365 дней в году</h3>
 
-                <p class="benefits-text">У нас есть крутой тренажер, имитирующий реальный склон площадью 50м. кв</p>
-              </div>
-            <!-- </div> -->
+              <p class="benefits-text">У нас есть крутой тренажер, имитирующий реальный склон площадью 50м. кв</p>
+            </li>
 
-            <!-- <div class="benefits-table2"></div> -->
-              <div class="benefits-item">
-                <h3 class="benefits-title-small">20+</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title-small">20+</h3>
 
-                <p class="benefits-text">Наград завоевали наши ученики на регионалных и международных соревнованиях</p>
-              </div>
+              <p class="benefits-text">Наград завоевали наши ученики на регионалных и международных соревнованиях</p>
+            </li>
 
-              <div class="benefits-item">
-                <h3 class="benefits-title-small">ПОДАРИ ЛЫЖУ</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title-small">подари лыжу</h3>
 
-                <p class="benefits-text">Наш благотворительный проект - помогаем сиротам приобщиться к спорту и наладить
-                  жизнь</p>
-              </div>
+              <p class="benefits-text">Наш благотворительный проект - помогаем сиротам приобщиться к спорту и наладить
+                жизнь</p>
+            </li>
 
-              <div class="benefits-item">
-                <h3 class="benefits-title-small">ЗАКРЫТЫЙ КЛУБ</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title-small">закрытый клуб</h3>
 
-                <p class="benefits-text">Наши студенты попадают на закрытые мастер-классы и вечеринки</p>
-
-              </div>
-            <!-- </div> -->
-
+              <p class="benefits-text">Наши студенты попадают на закрытые мастер-классы и вечеринки</p>
+            </li>
+          </ul>
         </div>
-
-
-
-
       </div>
 
 
@@ -102,17 +93,20 @@
 
     <section class="purchaise">
       <div class="purchaise-feed">
-        <h2 class="purchaise-title">ГОУ! ПОКОРЯТЬ СКЛОНЫ ВМЕСТЕ</h2>
+        <div class="container">
+          <h2 class="purchaise-title">гоу! покорять склоны вместе</h2>
+          <button class="purchaise-btn">Начать учиться</button>
+          <div class="wrap-image">
+            <img src="images/happy-ski.jpg" alt="Два лыжника" class="purchaise-img"></img>
 
-        <button class="purchaise-btn">Начать учиться</button>
+            <img src="images/ski-people.jpg" alt="Трасса лыжников" class="purchaise-img"></img>
 
-        <img src="images/happy-ski.jpg" alt="Два лыжника" class="purchaise-img"></img>
+            <img src="images/happy-people.jpg" alt="Довольные сноубордисты" class="purchaise-img"></img>
 
-        <img src="images/ski-people.jpg" alt="Трасса лыжников" class="purchaise-img"></img>
-
-        <img src="images/happy-people.jpg" alt="Довольные сноубордисты" class="purchaise-img"></img>
-
-        <img src="images/snowboard.jpg" alt="Трасса сноубордистов" class="purchaise-img"></img>
+            <img src="images/snowboard.jpg" alt="Трасса сноубордистов" class="purchaise-img"></img>
+          </div>
+        </div>
+      </div>
 
       </div>
 
@@ -125,31 +119,30 @@
   <footer class="footer">
 
     <div class="footer-feed">
-      <p class="footer-text">Присоеденяйся</p>
+      <div class="footer-wrap">
+        <div class="social-wrap">
+          <p class="footer-text">Присоеденяйся</p>
+        <ul class="footer-social">
+          <li class="social-icon">
+            <a href="#" class="social-link" style="background-image:url(images/twitter.svg)"></a>
+          </li>
+          <li class="social-icon">
+            <a href="#" class="social-link" title="Мы в Линкед Ин" style="background-image:url(images/linkedin.svg)"></a>
+          </li>
+          <li class="social-icon">
+            <a href="#" class="social-link" title="Мы в ВК" style="background-image:url(images/google.svg)"></a>
+          </li>
+          <li class="social-icon">
+            <a href="#" class="social-link" title="Мы в Телеграме" style="background-image:url(images/facebook.svg)"></a>
+          </li>
+        </ul>
+        </div>
+        <div class="text-wrap">
+          <p class="footer-copyright">copy+v copy+c © 2021</p>
+        </div>
 
-      <ul class="footer-social">
-        <li class="social-icon"><a href="#" class="social-link"><img src="images/Vector.png" alt="Twitter"
-              class="social-img"></a>
-        </li>
-        <li class="social-icon">
-          <a href="#" class="social-lnk" title="Мы в Линкед Ин"><img src="images/Vector (1).png" alt="Linked In"
-              class="social-img"></a>
-        </li>
-        <li class="social-icon">
-          <a href="#" class="social-lnk" title="Мы в ВК"><img src="images/Vector (2).png" alt="Google +"
-              class="social-img"></a>
-        </li>
-        <li class="social-icon">
-          <a href="#" class="social-lnk" title="Мы в Телеграме"><img src="images/Vector (3).png" alt="Facebook"
-              class="social-img"></a>
-        </li>
-      </ul>
-
-      <p class="footer-copyright">copy+v copy+c © 2021</p>
+      </div>
     </div>
-
-
-
   </footer>
 
 </body>
